static/css/base.css
/*--Color text #1a1a1a background color #80C4FF a:hover #98f2a4--*/

/*--General--*/

.overlay {
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	background: white;
    z-index: -1;
}

.border-black {
    border: 1px solid black !important;
}

/*--Search box placeholder---*/
input[name='q']::placeholder {
    color: #aab7c4;
}

/*--Card image universal height to display each image evenly--*/
img {
 height:250px;
}


/*--Home page--*/

html {
    height: 100%;
}

body {
    background: url('/media/homebackground.jpg') no-repeat center center fixed;
    background-size: cover;
    height: calc(100vh - 175px);
    color: #1a1a1a;
    font-family: 'RocknRoll One';
    overflow:auto;
}

.text-lean {
    color:#1a1a1a;
}

/*--homepage header--*/

.dropdown-item.active, .dropdown-item:active{
    background-color: #80ffa9;
}

.top-banner{
    background-color: #80C4FF;
    color:#1a1a1a;   
}


i {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    color:#1a1a1a;
    font-size: 24px;
}

.logo-font {
    text-transform: uppercase;
}

/*--Main Navbar--*/
.navbar-color {
  background-color:#80C4FF;
  border: 1px solid black !important;  
}

.navbar-toggler {
    border: 2px solid black !important;
}

a.dropdown-item-sm{
    color:#1a1a1a;
}

/*---Hover---*/
a:hover {
    background: #98f2a4;
}

/*---buttons--*/
.gym-now-button, 
.buy-now-button{
    background: #80C4FF;
    color:#1a1a1a;
    min-width: 260px;
}

/*---Increment counter on product details page--*/
.small-buy-now-button{
    background: #80C4FF;
    color:#1a1a1a;
}

.gym-now-button:hover{
    background:#1a1a1a;
    color:#80C4FF;
}

.btn-secondary {
    background: #1a1a1a;
    color:#80C4FF;
}

.btt-button {
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;
}

.btt-link, 
.update-link,
.remove-item {
    cursor: pointer;
}

/*--Add class or membership button--*/
.add-class {
    background-color: #80ffa9;
    color:#1a1a1a;
}

.cancel-button {
    background-color: #f73668;
    color:#1a1a1a;
}

/*--Footer--*/

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}



footer {
    background-color:#80C4FF;
    color:#1a1a1a;
}

.social-media a {
  font-size: 36px;
  padding-left: 15px;
  color: #1a1a1a;
}

.social-media a:hover {
    background: #98f2a4;
    color:#ff80c7;
}


/*--Toasts--*/
.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
    animation-delay: 10s;
}

.toast-capper {
    height: 2px;
}

/*----Bag and Toasts CSS---*/
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/*---Allauth CSS---*/
.allauth-form-inner-content p {
    margin-top: 1.5rem;
    color: #6c757d;
}

.allauth-form-inner-content input {
    border-color:#80C4FF;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #000;
    border: 1px solid #000;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #fff;
    background-color: #222;
    border-color: #222;
}


/*--Coach Page CSS--*/
.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  max-width: 100%;
  margin: auto;
}

.role {
  color: grey;
  font-size: 18px;
}

.btn-block {
  border: none;
  outline: 0;
  display: inline-block;
  padding: 8px;
  color: #1a1a1a;
  background-color:#80C4FF;
  text-align: center;
  cursor: pointer;
  width: 100%;
  height:100%;
  font-size: 18px;
}

.card-social a {
  text-decoration: none;
  font-size: 18px;
  color: black;
}

button:hover, a:hover {
  opacity: 0.7;
}


/* Product Form */
.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #f73668;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color:#f73668;
    border-color:#f73668;
    border-radius: 0;
}

/*--Media Queries--*/

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 175px;
    }
}

/*--Mobile device navbar fix--*/
@media (max-width: 991px) {
    .header-container {
        padding-top: 116px;
    }

    body {
        height: calc(100vh - 116px);
    }

    .display-4.logo-font.text-black {
        font-size: 2rem;
    }

    .nav-link {
        padding: 0.15rem;
    }

    .nav-link i.fa-lg {
        font-size: 1rem;
    }

    .navbar-toggler {
        padding: .6rem .6rem;
        font-size: 1rem;
    }
}

